# Yuri-Ai

./: .gitignore  README.md
Yuri/: Cargo.toml
Yuri-core/: Cargo.toml
Yuri-core/src/: agent.rs  attention.rs  character.rs  lib.rs  mod.rs
Yuri-core/src/clients/: direct.rs  discord.rs  heuris.rs  mod.rs  telegram.rs  twitter.rs
Yuri-core/src/knowledge/: error.rs  mod.rs  models.rs  store.rs  types.rs
Yuri-core/src/loaders/: github.rs
Yuri-solana/: Cargo.toml  README.md
Yuri-solana/src/: lib.rs  swap.rs  transfer.rs  types.rs
Yuri-solana/src/gmgn/: client.rs  types.rs
Yuri-solana/src/solana/: swap.rs  transfer.rs
Yuri-solana/src/tools/: mod.rs  swap.rs  transfer.rs
Yuri/src/: main.rs
Yuri/src/characters/: Yuri.toml
agent-twitter-client/: .gitignore  Cargo.toml  README.md
agent-twitter-client/examples/: get_home_timeline.rs
agent-twitter-client/src/: constants.rs  profile.rs  relationships.rs  scraper.rs  search.rs  tweets.rs
agent-twitter-client/src/api/: client.rs  mod.rs
agent-twitter-client/src/timeline/: home.rs
rig-core/: Cargo.toml
rig-core/examples/: simple_model.rs
